--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,7 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: url('img.jpg') no-repeat;
+    background: url('assets/img/img.jpg') no-repeat;
     background-size: cover;
     background-position: center;
 }
